# crop-by-ar

./: .gitignore  README.md  pyproject.toml
src/: crop_by_ar.py
