[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crop-by-ar"
version = "0.1.1"
description = "A command-line tool to crop images to a specified aspect ratio."
authors = [
    { name = "ShinChven", email = "shinchven@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "Pillow"
]
urls = { "repository" = "https://github.com/ShinChven/crop-by-ar" }

[tool.setuptools]
packages = ["src"]

[project.scripts]
crop-by-ar = "src.crop_by_ar:main"
